--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ExemploPlugin" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ExemploPlugin.</description>
+<project name="GitPlugin" default="default" basedir=".">
+    <description>Builds, tests, and runs the project GitPlugin.</description>
     <import file="nbproject/build-impl.xml"/>
     <target name="-post-jar">
         <echo message="Publicando plugin..."/>
